--- a/app/views/amortization/home.haml
+++ b/app/views/amortization/home.haml
@@ -10,9 +10,9 @@
     %br
     = text_field_tag :amount, 10000, placeholder: 10000
     %br
-    = label_tag 'Disbursment date'
+    = label_tag 'Request date'
     %br
-    = text_field_tag :disbursement_date, Date.today.strftime('%m/%d/%Y'), placeholder: 'MM/DD/YYYY', class: 'disbursement-date'
+    = text_field_tag :request_date, Date.today.strftime('%m/%d/%Y'), placeholder: 'MM/DD/YYYY', class: 'disbursement-date'
     %br
     = label_tag 'Anual Interest rate'
     %br
