integrating strategies with ui

--- a/app/views/amortization/home.haml
+++ b/app/views/amortization/home.haml
@@ -24,8 +24,11 @@
     = text_field_tag :terms, 12, placeholder: 12
     = "Months"
     %br
-    = label_tag 'interest_only_for_3_months', 'Repay only interest for 3 months'
-    = check_box_tag :interest_only_for_3_months, true, false, class: 'interest-only-check-box'
+    - Amortization::Strategies::Base.strategy_name_class_map.each do |name, klass|
+      = radio_button_tag :schedule_type, name, klass == Amortization::Strategies::Base.strategies.first, class: 'interest-only-check-box'
+      = label_tag name, I18n.t(name)
+      
+      %br
     %br
     = submit_tag 'Calculate'
     .message
