show fixed monthly payment only for regular schedule

--- a/app/views/amortization/calculate.haml
+++ b/app/views/amortization/calculate.haml
@@ -1,4 +1,4 @@
-- unless params[:interest_only_for_3_months]
+- unless params[:schedule_type] == 'amortization.strategies.base'
   %h2
     Monthly Payments
   %h1
