maintaining order of strategy options

--- a/app/views/amortization/calculate.haml
+++ b/app/views/amortization/calculate.haml
@@ -1,4 +1,4 @@
-- unless params[:schedule_type] == 'amortization.strategies.base'
+- if params[:schedule_type] == 'amortization.strategies.base'
   %h2
     Monthly Payments
   %h1
